@@ -43,7 +43,7 @@
  */
 /*
  * Modified for RefindPlus
- * Copyright (c) 2020-2023 Dayo Akanji (sf.net/u/dakanji/profile)
+ * Copyright (c) 2020-2024 Dayo Akanji (sf.net/u/dakanji/profile)
  *
  * Modifications distributed under the preceding terms.
  */
@@ -504,7 +504,6 @@ typedef struct {
     BOOLEAN                     SupplyNVME;
     BOOLEAN                     SupplyAPFS;
     BOOLEAN                     SupplyUEFI;
-    BOOLEAN                     SilenceAPFS;
     BOOLEAN                     SyncAPFS;
     BOOLEAN                     NvramProtect;
     BOOLEAN                     ScanAllESP;
