@@ -63,7 +63,6 @@ decline_help_text     |Disables complementary text colours if not required
 decouple_key_f10      |Unmaps the `F10` key from native screenshots (the `\` key remains mapped)
 disable_amfi          |Disables AMFI Checks on macOS if required
 disable_apfs_load     |Disables inbuilt provision of APFS filesystem capability
-disable_apfs_mute     |Disables suppression of verbose APFS text on boot
 disable_apfs_sync     |Disables feature allowing direct APFS/FileVault boot (Without "PreBoot")
 disable_compat_check  |Disables Mac version compatibility checks if required
 disable_nvram_paniclog|Disables macOS kernel panic logging to nvRAM
@@ -129,7 +128,6 @@ Significant visible implementation differences vis-a-vis the upstream base are:
 - **GOP Driver Provision:** RefindPlus attempts to ensure that UEFI 2.x GOP drivers are available on EFI 1.x units by attempting to reload such drivers when it detects an absence of GOP on such units to permit the use of modern GPUs on legacy units. Users that prefer not to use this feature can activate the RefindPlus-Specific `disable_reload_gop` configuration token to switch it off.
 - **AppleFramebuffer Provision:** RefindPlus defaults to always providing Apple framebuffers on Macs, when not available under certain circumstances. This is done using an inbuilt `SetAppleFB` feature. Users that prefer not to use this feature can activate the RefindPlus-Specific `disable_set_applefb` configuration token to switch it off.
 - **APFS Filesystem Provision:** RefindPlus defaults to always providing APFS Filesystem capability, when not available but is required, without a need to load an APFS driver. This is done using an inbuilt `SupplyAPFS` feature. Users that prefer not to use this feature can activate the RefindPlus-Specific `disable_apfs_load` configuration token to switch it off.
-- **APFS Verbose Text Suppression:** RefindPlus defaults to always suppresses verbose text output associated with loading APFS functionality by the inbuilt `SupplyAPFS` feature. Users that prefer not to use this feature can activate the RefindPlus-Specific `disable_apfs_mute` configuration token to switch it off.
 - **APFS PreBoot Volumes:** RefindPlus always synchronises APFS System and PreBoot partitions transparently such that the Preboot partitions of APFS volumes are always used to boot APFS formatted macOS. Hence, a single option for booting macOS on APFS volumes is presented in RefindPlus to provide maximum APFS compatibility, consistent with Apple's implementation. Users that prefer not to use this feature can activate the RefindPlus-Specific `disable_apfs_sync` configuration token to switch it off.
 - **Apple nvRAM Protection:** RefindPlus always prevents UEFI Windows Secure Boot from saving certificates to Apple nvRAM as this can result in damage and an inability to boot. Blocking these certificates does not impact the operation of UEFI Windows on Apple Macs. This filtering only happens when Apple firmware is detected and is not applied to other types of firmware. Users that prefer not to use this feature can activate the RefindPlus-Specific `disable_nvram_protect` configuration token to switch it off.
 - **Secondary Configuration Files:** While the upstream documentation prohibits including tertiary configuration files from secondary configuration files, there is no mechanism enforcing this prohibition. Hence, tertiary, quaternary, quinary, and more, configuration files can in fact be included. RefindPlus enforces a limitation to secondary configuration files.
